...
                                </constraints>
                                <fontDescription key="fontDescription" name="MarkerFelt-Wide" family="Marker Felt" pointSize="25"/>
                                <state key="normal" title="PLAYER Vs BOT" backgroundImage="homebutton"/>
                                <connections>
                                    <action selector="playerBotButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Ldm-LM-rmj"/>
...
                                <rect key="frame" x="68" y="497" width="278" height="90"/>
                                <fontDescription key="fontDescription" name="MarkerFelt-Wide" family="Marker Felt" pointSize="25"/>
                                <state key="normal" title="BOT Vs BOT" backgroundImage="homebutton"/>
                                <connections>
                                    <action selector="botBotButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="qKm-Kh-Ztj"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" name="MarkerFelt-Wide" family="Marker Felt" pointSize="25"/>
                                <state key="normal" title="PLAY AGAIN" backgroundImage="homebutton"/>
                                <connections>
                                    <action selector="playAgainButtonTouched:" destination="xB5-cK-orX" eventType="touchUpInside" id="N06-Cg-APi"/>
...
                                <rect key="frame" x="68" y="451" width="278" height="90"/>
                                <fontDescription key="fontDescription" name="MarkerFelt-Wide" family="Marker Felt" pointSize="25"/>
                                <state key="normal" title="CHANGE MODE" backgroundImage="homebutton"/>
                                <connections>
                                    <action selector="changeModeButtonTouched:" destination="xB5-cK-orX" eventType="touchUpInside" id="X09-Db-tOy"/>
...
                                            <constraint firstAttribute="width" secondItem="9aV-Uj-08K" secondAttribute="height" multiplier="90:90" id="1YI-HI-p01"/>
                                        </constraints>
                                        <state key="normal" backgroundImage="rockbtn"/>
                                        <connections>
                                            <action selector="rockButtonTouched:" destination="ts5-84-NuP" eventType="touchUpInside" id="5DI-aQ-rda"/>
...
                                    <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JMT-qe-4iC">
                                        <rect key="frame" x="135.5" y="0.0" width="127" height="127.5"/>
                                        <state key="normal" backgroundImage="paperbtn"/>
                                        <connections>
                                            <action selector="paperButtonTouched:" destination="ts5-84-NuP" eventType="touchUpInside" id="hpF-jT-HFy"/>
...
                                    <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Oks-nf-F1n">
                                        <rect key="frame" x="270.5" y="0.0" width="127.5" height="127.5"/>
                                        <state key="normal" backgroundImage="scissorsbtn"/>
                                        <connections>
                                            <action selector="scissorsButtonTouched:" destination="ts5-84-NuP" eventType="touchUpInside" id="c3z-cw-2Bq"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p4d-2X-Tn8">
                                <rect key="frame" x="16" y="576.5" width="382" height="39"/>
                                <accessibility key="accessibilityConfiguration" identifier="playerOneScoreId"/>
                                <fontDescription key="fontDescription" name="MarkerFelt-Wide" family="Marker Felt" pointSize="30"/>
                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FM5-M0-6Ld">
                                <rect key="frame" x="16" y="280.5" width="382" height="39"/>
                                <accessibility key="accessibilityConfiguration" identifier="playerTwoScoreId"/>
                                <fontDescription key="fontDescription" name="MarkerFelt-Wide" family="Marker Felt" pointSize="30"/>
                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
